--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -1,59 +1,50 @@
-/* Loader.css */
+/* HTML: <div class="loader"></div> */
 .loader-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-}
-
-.blob {
-    width: 80px;
-    height: 80px;
-    display: grid;
-    background: transparent;
-    filter: blur(1px) contrast(10);
-    padding: 8px;
-    mix-blend-mode: darken;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh; /* Full viewport height */
+   width: 100vw; /* Full viewport width */
+   position: fixed; /* Ensure it stays centered even if the page scrolls */
+   top: 0;
+   left: 0;
+   background-color: rgba(255, 255, 255, 0.8); /* Optional: Add a semi-transparent background */
+   z-index: 9999; /* Ensure it appears above other elements */
  }
- 
- .blob:before,
- .blob:after {
-    content: "";
-    grid-area: 1/1;
-    width: 32px;
-    height: 32px;
-    background: #000000;
-    animation: blob-rhf26m 2s infinite;
+.loader {
+   width: 40px;
+   height: 20px;
+   --c:no-repeat radial-gradient(farthest-side,#f54a00 93%,#0000);
+   background:
+     var(--c) 0    0,
+     var(--c) 50%  0,
+     var(--c) 100% 0;
+   background-size: 8px 8px;
+   position: relative;
+   animation: l4-0 1s linear infinite alternate;
  }
- 
- .blob:after {
-    animation-delay: -1s;
+ .loader:before {
+   content: "";
+   position: absolute;
+   width: 8px;
+   height: 12px;
+   background: #f54a00;
+   left: 0;
+   top: 0;
+   animation: 
+     l4-1 1s  linear infinite alternate,
+     l4-2 0.5s cubic-bezier(0,200,.8,200) infinite;
  }
- 
- @keyframes blob-rhf26m {
-    0% {
-       transform: translate(0, 0);
-    }
- 
-    25% {
-       transform: translate(100%, 0);
-    }
- 
-    50% {
-       transform: translate(100%, 100%);
-    }
- 
-    75% {
-       transform: translate(0, 100%);
-    }
- 
-    100% {
-       transform: translate(0, 0);
-    }
+ @keyframes l4-0 {
+   0%      {background-position: 0  100%,50% 0   ,100% 0}
+   8%,42%  {background-position: 0  0   ,50% 0   ,100% 0}
+   50%     {background-position: 0  0   ,50% 100%,100% 0}
+   58%,92% {background-position: 0  0   ,50% 0   ,100% 0}
+   100%    {background-position: 0  0   ,50% 0   ,100% 100%}
+ }
+ @keyframes l4-1 {
+   100% {left:calc(100% - 8px)}
+ }
+ @keyframes l4-2 {
+   100% {top:-0.1px}
  }
